--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
-<table border="1">
-    <th colspan="9"><h1>Cars</h1></th>
+<table border="1px solid red">
+    <th><h1>Customers</h1></th>
+    {% for customer in customers %}
     <tr>
-        <td>{{RegNr}}</td>
-        <td>{{Make}}</td>
-        <td>{{Year}}</td>
-        <td>{{Color}}</td>
-        <td>{{Price}}</td>
-        <td>{{Checked Out Time}}</td>
-        <td>{{Checked In time}}</td>
+        <td>{{customer.ssNr}}</td>
+        <td>{{customer.name}}</td>
+        <td>{{customer.adress}}</td>
+        <td>{{customer.postalAdress}}</td>
+        <td>{{customer.phonenumber}}</td>
         <td>
-            <form action="/editCar" method="POST">
+            <form action="/editCustomer" method="POST">
                 <input type="submit" value="Edit">
             </form>
         </td>
         <td>
-            <form action="/carRemoved">
+            <form action="/removedCustomer" method="POST">
                 <input type="submit" value="Remove">
             </form>
         </td>
     </tr>
+    {% endfor %}
     <tr>
         <td>
-            <form action="/addCar">
-                <input type="submit" value="Add Car">
+            <form action="/addCustomer" method="POST">
+                <input type="submit" value="Add Customer">
             </form>
         </td>
     </tr>
     <tr>
         <td>
-            <form action="/" method="post">
+            <form action="/" method="POST">
                 <input type="submit" value="Main Menu">
             </form>
         </td>
